# neeml

./: Cargo.toml  IDEAS.md
.github/workflows/: dependency-review.yml  verify-pr-commit.yml
neeml/: Cargo.toml
neeml-common/: Cargo.toml
neeml-common/src/traits/: providers.rs
neeml-gui/: Cargo.toml
neeml-tui/: Cargo.toml
neeml_cli/: Cargo.toml
neeml_core/: Cargo.toml
neeml_core/src/: providers.rs
neeml_gui/: Cargo.toml
neeml_server/: Cargo.toml
neeml_tui/: Cargo.toml
