[package]
name = "neeml-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["providers-mail", "providers-storage"]

providers-all = ["providers-mail", "providers-news", "providers-storage", "providers-contexts", "providers-completion"]

providers-completion = ["providers-completion-llm"]
providers-completion-llm = ["providers-completion-llm-ollama", "providers-completion-llm-openai"]
providers-completion-llm-ollama = []
providers-completion-llm-openai = []
providers-contexts = ["providers-contexts-dav", "providers-contexts-exchange", "providers-contexts-gmail", "providers-contexts-notmuch"]
providers-contexts-caldav = []
providers-contexts-carddav = []
providers-contexts-dav = ["providers-contexts-carddav", "providers-contexts-caldav"]
providers-contexts-exchange = ["exchange-rs"]
providers-contexts-gmail = ["google-gmail1"]
providers-contexts-notmuch = ["melib/notmuch"]
providers-mail = ["providers-mail-imap", "providers-mail-maildir", "providers-mail-mbox", "providers-news-nntp", "providers-mail-sendmail", "providers-mail-smtp", "providers-mail-exchange", "providers-mail-jmap", "providers-mail-gmail"]
providers-mail-exchange = ["exchange-rs"]
providers-mail-gmail = ["google-gmail1"]
providers-mail-imap = ["melib/imap"]
providers-mail-jmap = ["melib/jmap"]
providers-mail-maildir = ["melib/maildir"]
providers-mail-mbox = ["melib/mbox"]
providers-mail-sendmail = []
providers-mail-smtp = ["lettre"]
providers-news = ["providers-news-nntp", "providers-news-rss"]
providers-news-nntp = ["nntprs", "melib/nntp"]
providers-news-rss = []
providers-storage = ["providers-storage-sqlite", "providers-storage-rsync"]
providers-storage-rsync = []
providers-storage-sqlite = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true

imap = { version = "2.4.1", optional = true }
google-gmail1 = { version = "5.0.4", optional = true }
jmap-client = { version = "0.3.2", optional = true }
exchange-rs = { git = "https://github.com/neeml/exchange-rs", branch = "main", optional = true }
nntprs = { git = "https://github.com/neeml/nntprs", branch = "main", optional = true }
lettre = { version = "0.11.1", optional = true }
melib = { version = "0.8.5", optional = true }
