# SPDX-FileCopyrightText: 2024 The Neeml Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "neeml-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true

exchange-rs = { git = "https://github.com/neeml/exchange-rs", branch = "main", optional = true, default-features = false }
google-gmail1 = { version = "5.0.5", optional = true }
melib = { version = "0.8.7", optional = true, default-features = false }
nntprs = { git = "https://github.com/neeml/nntprs", branch = "main", optional = true, default-features = false }
sendmail = { version = "2.0.0", optional = true }
