# SPDX-FileCopyrightText: 2024 The Neeml Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "neeml-gui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
