[package]
name = "neeml"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "neeml"
path = "src/bin/neeml.rs"
required-features = ["server"]

[[bin]]
name = "neemlc"
path = "src/bin/neemlc.rs"
required-features = ["client"]

[features]
default = ["full"]
client = []
server = []

full = ["client", "server", "providers-all"]

providers-all = ["providers-mail", "providers-news", "providers-storage", "providers-contexts", "providers-completion"]

providers-completion = ["neeml-common/providers-completion-llm"]
providers-completion-llm = ["neeml-common/providers-completion-llm-ollama", "neeml-common/providers-completion-llm-openai"]
providers-completion-llm-ollama = ["neeml-common/providers-completion-llm-ollama"]
providers-completion-llm-openai = ["neeml-common/providers-completion-llm-openai"]
providers-contexts = ["neeml-common/providers-contexts-dav", "neeml-common/providers-contexts-exchange", "neeml-common/providers-contexts-gmail", "neeml-common/providers-contexts-notmuch"]
providers-contexts-caldav = ["neeml-common/providers-contexts-caldav"]
providers-contexts-carddav = ["neeml-common/providers-contexts-carddav"]
providers-contexts-dav = ["neeml-common/providers-contexts-carddav", "neeml-common/providers-contexts-caldav"]
providers-contexts-exchange = ["neeml-common/providers-contexts-exchange"]
providers-contexts-gmail = ["neeml-common/providers-contexts-gmail"]
providers-contexts-notmuch = ["neeml-common/providers-contexts-notmuch"]
providers-mail = ["neeml-common/providers-mail-imap", "neeml-common/providers-mail-maildir", "neeml-common/providers-mail-mbox", "neeml-common/providers-news-nntp", "neeml-common/providers-mail-sendmail", "neeml-common/providers-mail-smtp", "neeml-common/providers-mail-exchange", "neeml-common/providers-mail-jmap", "neeml-common/providers-mail-gmail"]
providers-mail-exchange = ["neeml-common/providers-mail-exchange"]
providers-mail-gmail = ["neeml-common/providers-mail-gmail"]
providers-mail-imap = ["neeml-common/providers-mail-imap"]
providers-mail-jmap = ["neeml-common/providers-mail-jmap"]
providers-mail-maildir = ["neeml-common/providers-mail-maildir"]
providers-mail-mbox = ["neeml-common/providers-mail-mbox"]
providers-mail-sendmail = ["neeml-common/providers-mail-sendmail"]
providers-mail-smtp = ["neeml-common/providers-mail-smtp"]
providers-news = ["neeml-common/providers-news-nntp", "neeml-common/providers-news-rss"]
providers-news-nntp = ["neeml-common/providers-news-nntp"]
providers-news-rss = ["neeml-common/providers-news-rss"]
providers-storage = ["neeml-common/providers-storage-sqlite", "neeml-common/providers-storage-rsync"]
providers-storage-rsync = ["neeml-common/providers-storage-rsync"]
providers-storage-sqlite = ["neeml-common/providers-storage-sqlite"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
neeml-common = { path = "../neeml-common", version = "0.1.0" }
