# SPDX-FileCopyrightText: 2024 The Neeml Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "neeml"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "neeml"
path = "src/bin/neeml.rs"
required-features = ["server"]

[[bin]]
name = "neemlc"
path = "src/bin/neemlc.rs"
required-features = ["client"]

[features]
default = ["full"]
client = []
server = []

full = ["client", "server", "providers-all"]

providers-all = ["providers-mail", "providers-news", "providers-storage", "providers-completion"]

providers-completion = ["neeml-common/providers-completion-llm"]
providers-completion-llm = ["neeml-common/providers-completion-llm-ollama", "neeml-common/providers-completion-llm-openai"]
providers-completion-llm-ollama = ["neeml-common/providers-completion-llm-ollama"]
providers-completion-llm-openai = ["neeml-common/providers-completion-llm-openai"]
providers-completion-contacts-carddav = ["neeml-common/providers-completion-contacts-carddav"]
providers-contexts-notmuch = ["neeml-common/providers-contexts-mail-notmuch"]
providers-mail = ["neeml-common/providers-mail-imap", "neeml-common/providers-mail-maildir", "neeml-common/providers-mail-mbox", "neeml-common/providers-news-nntp", "neeml-common/providers-mail-sendmail", "neeml-common/providers-mail-smtp", "neeml-common/providers-mail-exchange", "neeml-common/providers-mail-jmap", "neeml-common/providers-mail-gmail"]
providers-mail-exchange = ["neeml-common/providers-mail-exchange"]
providers-mail-gmail = ["neeml-common/providers-mail-gmail"]
providers-mail-imap = ["neeml-common/providers-mail-imap"]
providers-mail-jmap = ["neeml-common/providers-mail-jmap"]
providers-mail-maildir = ["neeml-common/providers-mail-maildir"]
providers-mail-mbox = ["neeml-common/providers-mail-mbox"]
providers-mail-sendmail = ["neeml-common/providers-mail-sendmail"]
providers-mail-smtp = ["neeml-common/providers-mail-smtp"]
providers-news = ["neeml-common/providers-news-nntp", "neeml-common/providers-news-rss"]
providers-news-nntp = ["neeml-common/providers-news-nntp"]
providers-news-rss = ["neeml-common/providers-news-rss"]
providers-storage = ["neeml-common/providers-storage-sqlite", "neeml-common/providers-storage-rsync"]
providers-storage-rsync = ["neeml-common/providers-storage-rsync"]
providers-storage-sqlite = ["neeml-common/providers-storage-sqlite"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
neeml-common = { path = "../neeml-common", version = "0.1.0" }
