[package]
name = "neeml_cli"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
